Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16153

Remote Valgrind does not work anymore

XMLWordPrintable

    • a14e7db1a4e9d1173ed9e8cc85585b147ddbaae9

      When starting valgrind on a remote device the startup command contains the following parameter: xml-socket=127.0.0.1:40287
      I guess that this socket address should point to the logging server, but that is not reachable on 127.0.0.1 from the remote device
      In commit aa52cfa0e6745d517b11c85a013a35f9712257f5 there were a lot of changes regarding the behaviour of remote calling valgrind. But it seems like the solution for the remote call was to have a slot localHostAddressRetrieved to be called with the right IP address which in result calls startServer not with 127.0.0.1 but the interface address of the host, which would be correct.
      In commit dcfb622126ea8141eb961003e44afe4c89888bd5 the startServer argument that possibly contains the right IP address has been removed. Instead a hardcoded 127.0.0.1 IP address has been set, which finally breaks valgrind to be called on a remote device.

        For Gerrit Dashboard: QTCREATORBUG-16153
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            volki21 Volker Vogelhuber
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes