Fix valgrind with remote Linux hosts.

This reverts commit f1ccad12dc and adds the necessary code to make both
the local and the remote case work.

Task-number: QTCREATORBUG-16153
Change-Id: I233ec9d7b31ca6e076515dd03ae7400758ee0c34
Reviewed-by: hjk <hjk@theqtcompany.com>