src/plugins/valgrind/memcheck/memcheckrunner.h
@@ -53,6 +53,8 @@ signals:
     void logMessageReceived(const QByteArray &);
 
 private slots:
+    void localHostAddressRetrieved(const QHostAddress &localHostAddress);
+
     void xmlSocketConnected();
     void logSocketConnected();
     void readLogSocket();
@@ -60,7 +62,7 @@ private slots:
 private:
     QString tool() const;
 
-    bool startServers();
+    bool startServers(const QHostAddress &localHostAddress);
     QStringList memcheckLogArguments() const;
 
     class Private;
